--- a/ConsoleApp2/ConsoleApp2.csproj
+++ b/ConsoleApp2/ConsoleApp2.csproj
@@ -64,6 +64,7 @@
     <Compile Include="interThisProgram.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SwitchTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
