--- a/ConsoleApp2/ConsoleApp2.csproj
+++ b/ConsoleApp2/ConsoleApp2.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SwitchTest.cs" />
+    <Compile Include="TypeTransfer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
