--- a/ConsoleApp2/ConsoleApp2.csproj
+++ b/ConsoleApp2/ConsoleApp2.csproj
@@ -67,6 +67,7 @@
     <Compile Include="orientation.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StructTest.cs" />
     <Compile Include="SwitchTest.cs" />
     <Compile Include="TypeTransfer.cs" />
   </ItemGroup>
