--- a/ConsoleApp2/ConsoleApp2.csproj
+++ b/ConsoleApp2/ConsoleApp2.csproj
@@ -59,6 +59,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArrayTest.cs" />
     <Compile Include="BooleanTest.cs" />
     <Compile Include="Chapter03.cs" />
     <Compile Include="DoWhileTest.cs" />
@@ -68,6 +69,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StructTest.cs" />
+    <Compile Include="SwitchCaseTest.cs" />
     <Compile Include="SwitchTest.cs" />
     <Compile Include="TypeTransfer.cs" />
   </ItemGroup>
