--- a/ConsoleApp2/ConsoleApp2.csproj
+++ b/ConsoleApp2/ConsoleApp2.csproj
@@ -59,9 +59,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArgsTest.cs" />
     <Compile Include="ArrayTest.cs" />
     <Compile Include="BooleanTest.cs" />
     <Compile Include="Chapter03.cs" />
+    <Compile Include="DelegateTest.cs" />
     <Compile Include="DoWhileTest.cs" />
     <Compile Include="IfTest.cs" />
     <Compile Include="interThisProgram.cs" />
@@ -72,6 +74,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RefTest.cs" />
+    <Compile Include="StructFunction.cs" />
     <Compile Include="StructTest.cs" />
     <Compile Include="SwitchCaseTest.cs" />
     <Compile Include="SwitchTest.cs" />
