--- a/ConsoleApp2/ConsoleApp2.csproj
+++ b/ConsoleApp2/ConsoleApp2.csproj
@@ -78,6 +78,7 @@
     <Compile Include="StructTest.cs" />
     <Compile Include="SwitchCaseTest.cs" />
     <Compile Include="SwitchTest.cs" />
+    <Compile Include="TraceTest.cs" />
     <Compile Include="TypeTransfer.cs" />
   </ItemGroup>
   <ItemGroup>
