--- a/ConsoleApp2/ConsoleApp2.csproj
+++ b/ConsoleApp2/ConsoleApp2.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Chapter03.cs" />
     <Compile Include="DelegateTest.cs" />
     <Compile Include="DoWhileTest.cs" />
+    <Compile Include="ExceptionFilterTest.cs" />
     <Compile Include="IfTest.cs" />
     <Compile Include="interThisProgram.cs" />
     <Compile Include="MaxValue.cs" />
