--- a/ConsoleApp2/ConsoleApp2.csproj
+++ b/ConsoleApp2/ConsoleApp2.csproj
@@ -74,6 +74,9 @@
     <Compile Include="Collections\BoxingTest.cs" />
     <Compile Include="Collections\Chicken.cs" />
     <Compile Include="Collections\Cow.cs" />
+    <Compile Include="Collections\Person.cs" />
+    <Compile Include="Collections\PersonCompareName.cs" />
+    <Compile Include="Collections\PersonTest.cs" />
     <Compile Include="Collections\Primes.cs" />
     <Compile Include="Collections\Progroms.cs" />
     <Compile Include="DelegateTest.cs" />
