--- a/EventTest/EventTest.csproj
+++ b/EventTest/EventTest.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{8880B4F5-8781-47EC-A33C-36F19F722BD2}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>EventTest</RootNamespace>
     <AssemblyName>EventTest</AssemblyName>
@@ -30,6 +30,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -41,6 +44,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AttributesSource\AttributeTest.cs" />
+    <Compile Include="AttributesSource\DecoratedClass.cs" />
+    <Compile Include="AttributesSource\DoesInterestingThingsAttribute.cs" />
     <Compile Include="EventTestSource\Connection.cs" />
     <Compile Include="EventTestSource\Display.cs" />
     <Compile Include="EventTestSource\MainClass.cs" />
