--- a/ConsoleApp2/ConsoleApp2.csproj
+++ b/ConsoleApp2/ConsoleApp2.csproj
@@ -66,6 +66,7 @@
     <Compile Include="ArrayTest.cs" />
     <Compile Include="BooleanTest.cs" />
     <Compile Include="Chapter03.cs" />
+    <Compile Include="ClassAndObject\Anonymous.cs" />
     <Compile Include="ClassAndObject\ClassTest.cs" />
     <Compile Include="ClassAndObject\StructAndClassTest.cs" />
     <Compile Include="ClassAndObject\TestDllReference.cs" />
