命名参数可选参数

--- a/ConsoleApp2/ConsoleApp2.csproj
+++ b/ConsoleApp2/ConsoleApp2.csproj
@@ -70,6 +70,7 @@
     <Compile Include="ClassAndObject\ClassTest.cs" />
     <Compile Include="ClassAndObject\StructAndClassTest.cs" />
     <Compile Include="ClassAndObject\TestDllReference.cs" />
+    <Compile Include="ClassAndObject\WordProcessor.cs" />
     <Compile Include="Collections\Animal.cs" />
     <Compile Include="Collections\AnimalNameLengthComparer.cs" />
     <Compile Include="Collections\Animals.cs" />
