--- a/LinqDemo/LinqDemo.csproj
+++ b/LinqDemo/LinqDemo.csproj
@@ -43,6 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AggregateDemo.cs" />
+    <Compile Include="BigDataDemo.cs" />
+    <Compile Include="DistinctDemo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
